# flask-boilerplate

./: .dockerenv  .env  .envrc  .gitignore  Dockerfile  app.py  cache.py  docker-compose.yml  emails.py  manage.py  models.py  pyproject.toml  readme.md  requirements.txt  tasks.py  test.py
app/: app.py  models.py  utils.py  views.py
app/static/js/components/: app-bar.js
app/templates/: 500.html  base.html
app/templates/email/: welcome.html
app/templates/web/: homepage.html  reset-email.html  reset-password.html
dash/: utils.py  views.py
migrations/: alembic.ini
migrations/versions/: 2017-12-30-10:48:32.py
static/css/: styles.css
static/js/: base-app.js  dash-root.js
templates/: 404.html  500.html  base.html  homepage.html
templates/dash/: nav.html  root.html
templates/email/: password-reset.html  welcome.html
templates/web/: login.html  reset-email.html  reset-password.html  sign-up.html
web/: views.py
