[tool.poetry]
name = "{{APP_SLUG}}"
version = "0.1.0"
description = "{{APP_BLURB}}"
authors = ["Hartley Brody <hartley.brody@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.2"
Flask-Session = "^0.4.0"
Flask-SQLAlchemy = "^2.5.1"
psycopg2-binary = "^2.9.3"
redis = "^4.3.4"
sentry-sdk = "^1.6.0"
gunicorn = "^20.1.0"
flask-talisman = "^1.0.0"
passlib = "^1.7.4"
blinker = "^1.4"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
Flask-DebugToolbar = "^0.13.1"
Flask-Migrate = "^3.1.0"
alembic = "^1.8.0"
python-dotenv = "^0.20.0"

[tool.poetry.scripts]
server = "web_app.app.app:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
